Fix alignment

--- a/static/style.css
+++ b/static/style.css
@@ -170,6 +170,7 @@ body::after {
   padding: 1.5rem clamp(1rem, 4vw, 2rem);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 1rem;
 }
 
